fix modal input padding too large

--- a/static/src/css/dashboard.css
+++ b/static/src/css/dashboard.css
@@ -338,3 +338,6 @@ h2.accordion:last-child{
     font-size: 16px;
     line-height: 24px;
 }
+.completed-task{
+    text-decoration: line-through;
+}
